# megattt

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  megattt.bat  sigantures.ods
.github/workflows/: build.yml
src/: buffer_control.c  client.c  client_net.c  client_net.h  common.h  main.c  raygui_impl.c  server.c  winsock_compat.h
